- 컨텐츠 영역 기본 css 작업 중

--- a/assets/01-html/02-blockInline/blockInline.html
+++ b/assets/01-html/02-blockInline/blockInline.html
@@ -11,43 +11,37 @@
 	<!-- 요약 설명 -->
 
 
-	<article id="block_element" class="uk_course" data-last-update="2019-11-11" style="height:1000px;">
+	<article id="block_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>블록 레벨 요소</h2>
-		<p>text text</p>
 	</article>
 	<!-- 블록 레벨 요소 -->
 
 
-	<article id="div_block" class="uk_course" data-last-update="2019-11-11" style="height:1000px; background:#fff;">
+	<article id="div_block" class="uk_course" data-last-update="2019-11-11">
 		<h2>대표적인 블록 요소 - div</h2>
-		<p>text text</p>
 	</article>
 	<!-- 대표적인 블록 요소 - div -->
 
 
-	<article id="inline_element" class="uk_course" data-last-update="2019-11-11" style="height:1000px; background:#f9f9f9;">
+	<article id="inline_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>인라인 요소</h2>
-		<p>text text</p>
 	</article>
 	<!-- 인라인 요소 -->
 
 
-	<article id="span_inline" class="uk_course" data-last-update="2019-11-11" style="height:1000px; background:#fff;">
+	<article id="span_inline" class="uk_course" data-last-update="2019-11-11">
 		<h2>대표적인 인라인 요소 - span</h2>
-		<p>text text</p>
 	</article>
 	<!-- 대표적인 인라인 요소 - span -->
 
 
-	<article id="element_nesting" class="uk_course" data-last-update="2019-11-11" style="height:1000px; background:#f9f9f9;">
+	<article id="element_nesting" class="uk_course" data-last-update="2019-11-11">
 		<h2>요소 중첩</h2>
-		<p>text text</p>
 	</article>
 	<!-- 요소 중첩 -->
 
 
-	<article id="only_empty" class="uk_course" data-last-update="2019-11-11" style="height:1000px; background:#fff;">
+	<article id="only_empty" class="uk_course" data-last-update="2019-11-11">
 		<h2>단일 요소 또는 빈 요소</h2>
-		<p>text text</p>
 	</article>
 	<!-- 단일 요소 또는 빈 요소 -->
