--- a/assets/01-html/06-embedded/embedded.html
+++ b/assets/01-html/06-embedded/embedded.html
@@ -1,89 +1,76 @@
 
-	<article id="iframe_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="iframe_element" class="uk_course">
 		<h2>iframe element</h2>
-		<p>text text</p>
 	</article>
 	<!-- iframe element -->
 
 
-	<article id="img_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="img_element" class="uk_course">
 		<h2>img element</h2>
-		<p>text text</p>
 	</article>
 	<!-- img element -->
 
 
-	<article id="map_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="map_element" class="uk_course">
 		<h2>map element</h2>
-		<p>text text</p>
 	</article>
 	<!-- map element -->
 
 
-	<article id="area_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="area_element" class="uk_course">
 		<h2>area element</h2>
-		<p>text text</p>
 	</article>
 	<!-- area element -->
 
 
-	<article id="video_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="video_element" class="uk_course">
 		<h2>video element</h2>
-		<p>text text</p>
 	</article>
 	<!-- video element -->
 
 
-	<article id="audio_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="audio_element" class="uk_course">
 		<h2>audio element</h2>
-		<p>text text</p>
 	</article>
 	<!-- audio element -->
 
-	<article id="track_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="track_element" class="uk_course">
 		<h2>track element</h2>
-		<p>text text</p>
 	</article>
 	<!-- track element -->
 
 
-	<article id="picture_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="picture_element" class="uk_course">
 		<h2>picture element</h2>
-		<p>text text</p>
 	</article>
 	<!-- picture element -->
 
 
-	<article id="source_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="source_element" class="uk_course">
 		<h2>source element</h2>
-		<p>text text</p>
 	</article>
 	<!-- picture element -->
 
 
-	<article id="svg_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="svg_element" class="uk_course">
 		<h2>svg element</h2>
-		<p>text text</p>
 	</article>
 	<!-- svg element -->
 
 
-	<article id="embed_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="embed_element" class="uk_course">
 		<h2>embed element</h2>
-		<p>text text</p>
 	</article>
 	<!-- embed element -->
 
 
-	<article id="object_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="object_element" class="uk_course">
 		<h2>object element</h2>
-		<p>text text</p>
 	</article>
 	<!-- object element -->
 
 
-	<article id="param_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="param_element" class="uk_course">
 		<h2>param element</h2>
-		<p>text text</p>
 	</article>
 	<!-- param element -->
