--- a/assets/01-html/07-edits/edits.html
+++ b/assets/01-html/07-edits/edits.html
@@ -1,14 +1,12 @@
 
-	<article id="del_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="del_element" class="uk_course">
 		<h2>del(Deleted Text) element</h2>
-		<p>text text</p>
 	</article>
 	<!-- del(Deleted Text) element -->
 
 
-	<article id="ins_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="ins_element" class="uk_course">
 		<h2>ins(insert) element</h2>
-		<p>text text</p>
 	</article>
 	<!-- ins(insert) element -->
 
