--- a/assets/01-html/10-structure/structure.html
+++ b/assets/01-html/10-structure/structure.html
@@ -1,14 +1,12 @@
 
-	<article id="html4_document" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="html4_document" class="uk_course">
 		<h2>HTML4에서의 문서 구조</h2>
-		<p>text text</p>
 	</article>
 	<!-- HTML4에서의 문서 구조 -->
 
 
-	<article id="html5_document" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="html5_document" class="uk_course">
 		<h2>HTML5에서의 문서 구조</h2>
-		<p>text text</p>
 	</article>
 	<!-- HTML5에서의 문서 구조 -->
 
