--- a/assets/guide.html
+++ b/assets/guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko"><!-- main_page -->
+<html lang="ko" class="sub_page" style="background:#fff;"><!-- main_page -->
 <head>
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css?family=Anton|Cinzel+Decorative:400,700,900|Jura:300,400,500,600,700|Noto+Sans+KR:100,300,400,500,700,900|Open+Sans:300,400,600,700,800&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,korean,latin-ext,vietnamese" rel="stylesheet">
@@ -64,98 +64,117 @@
 </head>
 <body>
 <div class="wrap">
+	<div class="content_area inner" style="padding-bottom:50px;">
 
-	<nav class="uk-skip">
-		<a href="#content">본문내용으로 건너띄기</a>
-	</nav>
-	<!-- //uk-skip -->
+		<p>
+			[상하 간격]<br>
+			.mt_l { margin-top 30px }<br>
+			.mt_m { margin-top 20px }<br>
+			.mt_s { margin-top 10px }<br>
+			.mt_sm { margin-top 5px }<br>
 
-	<header class="uk_header">
-		<div class="inner">
-			<h1 class="hd_logo uk_logo"><a href="/" class="uk_link">UXKM</a></h1>
+			[들여쓰기]<br>
+			.indent {padding-left:20px;} (모바일에서 5px)
+		</p>
 
-			<div class="hd_nav_area">
-				<nav class="nav">
-					<h2 class="sound_only">상단 메뉴</h2>
-				</nav>
 
-				<section class="aside">
-					<h2 class="sound_only">유틸 메뉴</h2>
+		<div class="uk_note mt_l">
+			<h3 class="sound_only">요약 설명</h3>
+			<p>HTML은 Tim Berners-Lee, Robert Cailliau 및 1989 년 부터 시작된 사람들에 의해 처음 만들어졌습니다.</p>
+			<p>HTML 은 프로그래밍 언어가 아닙니다. 콘텐츠의 구조를 정의하는 마크업 언어입니다.</p>
+			<p>HTML은 콘텐츠의 서로 다른 부분들을 씌우거나(wrap) 감싸서(enclose) 다른 형식으로 보이게하거나 특정한 방식으로 동작하도록 하는 일련의 요소(elements)로 이루어져 있습니다.</p>
+			<p>tags로 감싸는 것으로 단어나 이미지를 다른 어딘가로 하이퍼링크(hyperlink)하거나 단어들을 이탤릭체로 표시하고 글씨체를 크게 또는 작게 만드는 등의 일을 할 수 있습니다.</p>
+			<p>마크 업 언어는 컴퓨터가 텍스트를 처리하고 표시되는 방법을 제어하기 위해 서로 말을하는 방법입니다. 이를 위해 HTML은 tags와 attributes 라는 두 가지를 사용 합니다.</p>
+		</div>
+		<!-- uk_note -->
 
-					<!-- 검색 -->
-					<article class="hd_search">
-						<h3 class="sound_only">검색</h3>
-						<button type="button" class="ly_btn search_btn"><i>Search button</i></button>
-						<div class="hd_layer_box search_area">
-							<div class="inner">
-								<h4>Search Area</h4>
-								<div class="form">
-									<input type="text" placeholder="검색어를 입력해 주세요." required />
-									<button type="button" class="sch_bt"><i>검색하기</i></button>
-								</div>
+		<div class="ol_lst mt_l">
+			<h3 class="sound_only">설명</h3>
+			<ol>
+				<li>HTML은 HyperText Markup Language의 약자입니다.</li>
+				<li>웹 페이지는 HTML 문서라고도 불리며, HTML 태그들로 구성됩니다.</li>
+				<li>HTML(Hypertext Markup Language)은 웹페이지를 만들기 위한 표준 마크업 언어입니다.</li>
+				<li>각각의 HTML 태그는 웹 페이지의 디자인이나 기능을 결정하는데 사용됩니다.</li>
+				<li>HTML은 HyperText Markup Language의 약자입니다.</li>
+				<li>웹 페이지는 HTML 문서라고도 불리며, HTML 태그들로 구성됩니다.</li>
+				<li>HTML(Hypertext Markup Language)은 웹페이지를 만들기 위한 표준 마크업 언어입니다.</li>
+				<li>각각의 HTML 태그는 웹 페이지의 디자인이나 기능을 결정하는데 사용됩니다.</li>
+				<li>HTML은 HyperText Markup Language의 약자입니다.</li>
+				<li>웹 페이지는 HTML 문서라고도 불리며, HTML 태그들로 구성됩니다.</li>
+				<li>HTML(Hypertext Markup Language)은 웹페이지를 만들기 위한 표준 마크업 언어입니다.</li>
+				<li>각각의 HTML 태그는 웹 페이지의 디자인이나 기능을 결정하는데 사용됩니다.</li>
+			</ol>
+		</div>
+		<!-- ol_lst -->
 
-								<dl class="keyword_ex">
-									<dt>keyword example</dt>
-									<dd>div, p, strong, width, border-color, click, function</dd>
-								</dl>
-							</div>
-						</div>
-						<button type="button" class="search_close">검색 닫기</button>
-					</article>
+		<dl class="txt_ex mt_l">
+			<h3>1. HTML5 doctype</h3>
+			<p>현재 문서가 HTML5 문서임을 명시합니다. doctype은 문서의 최상위에 위치해야 하며, doctype의 선언방식은 다음과 같습니다.</p>
+		</dl>
+		<!-- txt_ex -->
 
-					<!-- 사이트맵 -->
-					<article class="hd_assetsLink">
-						<h3 class="sound_only">UI/UX Assets 전체메뉴</h3>
-						<button type="button" class="ly_btn assetsLink_btn"><i>Assets link button</i></button>
-						<div class="hd_layer_box assetsLink_area">
-							<!--<div class="ly_action_wrap">-->
-								<div class="assetsLink_in inner">
-									<h4>UI/UX <i>A</i>ssets Link</h4>
-								</div>
-							<!--</div>-->
-						</div>
-					</article>
-				</section>
+		<dl class="line_code mt_l">
+			<h4>1. HTML5 doctype</h4>
+			<p>&lt;!DOCTYPE html&gt;</p>
+		</dl>
+		<!-- line_code -->
+
+		<ul class="browser_support mt_l" data-tit="class">
+			<li class="ie false">지원안함</li>
+			<li class="edge">지원</li>
+			<li class="chrome">지원</li>
+			<li class="firefox">지원</li>
+			<li class="opera">지원</li>
+			<li class="safari">지원</li>
+		</ul>
+		<!-- browser_support -->
+
+		<div class="view_editor ex_code mt_l">
+			<h3 class="ve_tit">코드 설명용 에디터</h3>
+			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+				<div class="code_wrap">
+				<textarea readonly="readonly">
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>웹페이지 문서 제목입니다</title>
+	</head>
+	<body>
+		<h1>문서 제목 입니다.</h1>
+		<p>문서 단락 내용입니다.</p>
+	</body>
+</html></textarea>
+				</div>
 			</div>
 		</div>
-	</header>
-	<!-- //uk-header -->
+		<!-- 코드 설명용 에디터 -->
 
-	<section class="uk_container"></section>
-	<!-- //uk-main -->
-
-	<footer class="uk_footer">
-		<nav class="nav inner">
-			<div class="depth1"></div>
-			<div class="depth2"></div>
-		</nav>
-		<div class="btm">
-			<h1 class="uk_logo"><a href="/" class="uk_link">uxkm</a></h1>
-			<p class="copy">&copy; 2019 All Right Reserved. By UXKM.</p>
+		<div class="view_editor edit_code mt_l">
+			<h3 class="ve_tit">코드 편집용 에디터</h3>
+			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+				<div class="code_wrap">
+					<textarea>
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>웹페이지 문서 제목입니다</title>
+	</head>
+	<body>
+		<h1>문서 제목 입니다.</h1>
+		<p>문서 단락 내용입니다.</p>
+	</body>
+</html>
+				</textarea>
+				</div>
+			</div>
 		</div>
-	</footer>
-	<!-- //uk-footer -->
+		<!-- 코드 편집용 에디터 -->
 
+		<p class="reference mt_l">참조 : <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTML_Drag_and_Drop_API" target="_blank">Drag and Drop API</a></p>
 
-	<div class="zoom_wrap"></div><!-- 사용한다면 uk_container/uk_footer를 감쌀것-->
-
+	</div>
 </div><!-- //wrap -->
 
-
-<!--<div class="loading"><i>페이지 로딩 중</i></div>-->
-<div class="loading uxkm_start">
-	<div class="loading_wrap">
-		<div class="loading_rorate bg1"></div>
-		<div class="loading_rorate bg2"></div>
-		<div class="loading_txt">
-			<p class="tit">UXKM</p>
-			<p class="dot">loading...</p>
-		</div>
-	</div>
-</div>
-
-
-<!-- js ------------------------------------ -->
 <!-- plugin -->
 <script type="text/javascript" src="/assets/lib/js/plugin/jquery.easing.1.3.min.js"></script>
 <script type="text/javascript" src="/assets/lib/js/plugin/ukDetect-1.0.0.js"></script>
