--- a/assets/01-html/08-table/table.html
+++ b/assets/01-html/08-table/table.html
@@ -1,70 +1,60 @@
 
-	<article id="table_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="table_element" class="uk_course">
 		<h2>table element</h2>
-		<p>text text</p>
 	</article>
 	<!-- table element -->
 
 
-	<article id="caption_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="caption_element" class="uk_course">
 		<h2>caption element</h2>
-		<p>text text</p>
 	</article>
 	<!-- caption element -->
 
 
-	<article id="colgroup_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="colgroup_element" class="uk_course">
 		<h2>colgroup element</h2>
-		<p>text text</p>
 	</article>
 	<!-- colgroup element -->
 
 
-	<article id="col_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="col_element" class="uk_course">
 		<h2>col element</h2>
-		<p>text text</p>
 	</article>
 	<!-- col element -->
 
 
-	<article id="thead_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="thead_element" class="uk_course">
 		<h2>thead element</h2>
-		<p>text text</p>
 	</article>
 	<!-- thead element -->
 
 
-	<article id="tbody_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="tbody_element" class="uk_course">
 		<h2>tbody element</h2>
-		<p>text text</p>
 	</article>
 	<!-- tbody element -->
 
 
-	<article id="tfoot_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="tfoot_element" class="uk_course">
 		<h2>tfoot element</h2>
-		<p>text text</p>
 	</article>
 	<!-- tfoot element -->
 
 
-	<article id="tr_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="tr_element" class="uk_course">
 		<h2>tr element</h2>
-		<p>text text</p>
 	</article>
 	<!-- tr element -->
 
 
-	<article id="th_element" class="uk_course" style="height:1000px; background:#f9f9f9;">
+	<article id="th_element" class="uk_course">
 		<h2>th element</h2>
-		<p>text text</p>
 	</article>
 	<!-- th element -->
 
 
-	<article id="td_element" class="uk_course" style="height:1000px; background:#fff;">
+	<article id="td_element" class="uk_course">
 		<h2>td element</h2>
-		<p>text text</p>
 	</article>
 	<!-- td element -->
 
