--- a/assets/01-html/01-htmlStart/htmlStart.html
+++ b/assets/01-html/01-htmlStart/htmlStart.html
@@ -34,16 +34,16 @@
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap">
 						<textarea>
-	<!DOCTYPE html>
-	<html lang="ko">
-		<head>
-			<title>웹페이지 문서 제목입니다</title>
-		</head>
-		<body>
-			<h1>문서 제목 입니다.</h1>
-			<p>문서 단락 내용입니다.</p>
-		</body>
-	</html>
+<!DOCTYPE html>
+<html lang="ko">
+	<head>
+		<title>웹페이지 문서 제목입니다</title>
+	</head>
+	<body>
+		<h1>문서 제목 입니다.</h1>
+		<p>문서 단락 내용입니다.</p>
+	</body>
+</html>
 					</textarea>
 					</div>
 				</div>
@@ -98,25 +98,25 @@
 				<!--
 				<div class="line_code indent mt_m">
 					<h4>HTML5 doctype</h4>
-					<p>&lt;!DOCTYPE html&gt;</p>
+					<p class="indent">&lt;!DOCTYPE html&gt;</p>
 				</div>
 				<div class="line_code indent mt_m">
 					<h4>HTML 4.01 strict doctype</h4>
-					<p>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01//EN&quot; &quot;http://www.w3.org/TR/html4/strict.dtd&quot;&gt;</p>
+					<p class="indent">&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01//EN&quot; &quot;http://www.w3.org/TR/html4/strict.dtd&quot;&gt;</p>
 				</div>
 				<div class="line_code indent mt_m">
 					<h4>HTML 4.01 transitional doctype</h4>
-					<p>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Transitional//EN&quot; &quot;http://www.w3.org/TR/html4/loose.dtd&quot;&gt;</p>
+					<p class="indent">&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Transitional//EN&quot; &quot;http://www.w3.org/TR/html4/loose.dtd&quot;&gt;</p>
 				</div>
 				<div class="line_code indent mt_m">
 					<h4>XML 1.0 strict and transitional doctypes</h4>
-					<p>&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Strict//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd&quot;&gt;</p>
-					<p>&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Transitional//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd&quot;&gt;</p>
+					<p class="indent">&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Strict//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd&quot;&gt;</p>
+					<p class="indent">&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Transitional//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd&quot;&gt;</p>
 				</div>
 				<div class="line_code indent mt_m">
 					<h4>HTML 4.01 and XML 1.0 frameset doctypes</h4>
-					<p>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Frameset//EN&quot; &quot;http://www.w3.org/TR/html4/frameset.dtd&quot;&gt;</p>
-					<p>&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Frameset//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd&quot;&gt;</p>
+					<p class="indent">&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Frameset//EN&quot; &quot;http://www.w3.org/TR/html4/frameset.dtd&quot;&gt;</p>
+					<p class="indent">&lt;!DOCTYPE html PUBLIC &quot;-//W3C//DTD XHTML 1.0 Frameset//EN&quot; &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd&quot;&gt;</p>
 				</div>
 				-->
 
@@ -543,7 +543,7 @@ console.log($me.dataset.myAge); // "851"
 									</div>
 								</div>
 							</div>
-							<ul class="browser_support mt_s" data-tit="dir">
+							<ul class="browser_support mt_m" data-tit="dir">
 								<li class="ie false">지원안함</li>
 								<li class="edge false">지원안함</li>
 								<li class="chrome">지원</li>
@@ -559,3 +559,33 @@ console.log($me.dataset.myAge); // "851"
 		</div>
 	</article>
 	<!-- HTML 요소 -->
+
+
+
+	<article class="uk_note mt_lm">
+		<h2 class="tit">Javascript에서 사용하는 이벤트 핸들러 속성</h2>
+		<p>
+			onabort, onautocomplete, onautocompleteerror, onblur, oncancel, oncanplay,
+			oncanplaythrough, onchange, onclick, onclose, oncontextmenu, oncuechange,
+			ondblclick, ondrag, ondragend, ondragenter, ondragleave, ondragover,
+			ondragstart, ondrop, ondurationchange, onemptied, onfocus, onerror,
+			onfocus, oninput, oninvalid, onkeydown, onkeypress, onkeyup, onload,
+			onloadeddata, onloadedmetadata, onloadstart, onmousedown, onmouseenter,
+			onmouseleave, onmousemove, onmouseout, onmouseover, onmouseup,
+			onmousewheel, onpause, onplay, onplaying, onprogress, onratechange,
+			onseeked, onresize, onscroll, onseeked, onseeking, onselect, onshow, onsort,
+			onstalled, onsubmit, onsuspend, ontimeupdate, ontoggle, onvolumechange, onwaiting.
+		</p>
+	</article>
+	<!-- 요약 설명 -->
+
+
+	<article class="reference_box">
+		<h2 class="tit">참조</h2>
+		<ul class="link_lst">
+			<li class="reference"><a href="https://www.w3.org/TR/html52/document-metadata.html" target="_blank" class="fas">W3C 문서</a></li>
+			<li class="reference"><a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element" target="_blank" class="fas">MDN 문서</a></li>
+			<li class="reference"><a href="https://www.w3.org/TR/html51/dom.html#global-attributes" target="_blank" class="fas">W3C 전역속성</a></li>
+		</ul>
+	</article>
+	<!-- 참조 -->
