--- a/assets/guide.html
+++ b/assets/guide.html
@@ -172,6 +172,14 @@
 
 		<p class="reference mt_l">참조 : <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTML_Drag_and_Drop_API" target="_blank">Drag and Drop API</a></p>
 
+		<article class="reference_box mt_l">
+			<h2 class="tit">참조</h2>
+			<ul class="link_lst">
+				<li class="reference"><a href="https://www.w3.org/TR/html52/document-metadata.html" target="_blank" class="fas">W3C 문서</a></li>
+				<li class="reference"><a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element" target="_blank" class="fas">MDN 문서</a></li>
+				<li class="reference"><a href="https://www.w3.org/TR/html51/dom.html#global-attributes" target="_blank" class="fas">W3C 전역속성</a></li>
+			</ul>
+		</article>
 	</div>
 </div><!-- //wrap -->
 
