--- a/assets/guide.html
+++ b/assets/guide.html
@@ -68,13 +68,14 @@
 
 		<p>
 			[상하 간격]<br>
+			.mt_lm { margin-top 50px }<br>
 			.mt_l { margin-top 30px }<br>
 			.mt_m { margin-top 20px }<br>
 			.mt_s { margin-top 10px }<br>
 			.mt_sm { margin-top 5px }<br>
 
 			[들여쓰기]<br>
-			.indent {padding-left:20px;} (모바일에서 5px)
+			.indent {margin-left:25px;} (모바일에서 8px)
 		</p>
 
 
