--- a/main.html
+++ b/main.html
@@ -68,7 +68,7 @@
 		</div>
 
 		<div class="editor_wrap">
-			<div class="uk_editor" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap">
 					<textarea>
 <!DOCTYPE html>
