--- a/assets/01-html/03-sections/sections.html
+++ b/assets/01-html/03-sections/sections.html
@@ -1,48 +1,287 @@
 
-	<article id="header_element" class="uk_course">
+	<article class="uk_note mt_l">
+		<h3 class="sound_only">요약 설명</h3>
+		<p>콘텐츠 구획화 요소는 문서 콘텐츠를 논리적인 구조로 체계화 시킬 수 있도록 해줍니다.</p>
+		<p>콘텐츠 구획화 요소를 사용해 웹 페이지 콘텐츠의 큰 틀을 잡고, header, footer, navigation, heading 등을 이용해 시멘틱 마크업을 합니다.</p>
+	</article>
+
+
+	<article id="header_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>header element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;header&gt; 요소는 소개나 탐색을 돕는것의 그룹을 나타냅니다.<br>
+				일부 제목 요소들을 포함할 수도 있지만, 로고나 그룹의 제목, 탐색 폼과 같은것들이 포함될 수도 있습니다.
+			</p>
+
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.1.header_element1.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.1.header_element2.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.1.header_element3.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.1.header_element4.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="header">
+				<li class="ie">9+</li>
+				<li class="edge">지원</li>
+				<li class="chrome">5.0</li>
+				<li class="firefox">4.0</li>
+				<li class="opera">11.1</li>
+				<li class="safari">4.1</li>
+			</ul>
+		</div>
 	</article>
 	<!-- header element -->
 
 
-	<article id="heading_element" class="uk_course">
+	<article id="heading_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>heading(h1,h2,h3,h4,h5,h6) element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;h1&gt;–&lt;h6&gt; 요소는 6단계의 문서 제목을 구현합니다.<br>
+				구조적인 단계는 &lt;h1&gt;이 가장 높고 &lt;h6&gt;은 가장 낮습니다.<br>
+				제목 요소는 section의 주제를 짧게 설명합니다.<br>
+				제목 정보는 사용자 에이전트에 의해 사용될 수 있습니다.<br>
+				예를 들면, 문서의 각주를 자동적으로 생성하는데 사용될 수 있습니다.
+			</p>
+
+			<div class="view_editor edit_code mt_m" data-target="html/03-sections/3.2.heading_element1.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+			<div class="view_editor edit_code mt_m" data-target="html/03-sections/3.2.heading_element2.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="h1~h6">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">1.0</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- heading(h1,h2,h3,h4,h5,h6) element -->
 
 
-	<article id="section_element" class="uk_course">
+	<article id="section_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>section element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;section&gt;는 문서의 일반적인 구조를 나타냅니다.<br>
+				즉, (전형적으로 제목을 가지고 있는) 콘텐츠의 주제 그룹을 말합니다.<br>
+				각 &lt;section&gt;은 식별되어야하며, 일반적으로 (&lt;h1&gt;-&lt;h6&gt; 요소들을 자식으로 가집니다.)<br>
+				각 섹션은 자기들만의 제목 계층을 가질 수 있습니다. 그래서, 중첩된 섹션이라도 &lt;h1&gt; 제목을 가질 수 있습니다.
+			</p>
+
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.3.section_element1.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.3.section_element2.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+			<div class="view_editor edit_code mt_m" data-target="html/03-sections/3.3.section_element3.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="section">
+				<li class="ie">9+</li>
+				<li class="edge">지원</li>
+				<li class="chrome">5.0</li>
+				<li class="firefox">4.0</li>
+				<li class="opera">11.1</li>
+				<li class="safari">4.1</li>
+			</ul>
+		</div>
 	</article>
 	<!-- section element -->
 
 
-	<article id="nav_element" class="uk_course">
+	<article id="nav_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>nav element</h2>
+
+		<div class="indent mt_l">
+			<p>&lt;nav&gt; 요소는 현재 페이지 안 또는 다른 페이지로 가는 링크를 보여주는 페이지의 한 구조를 말합니다. 주로 태그 안에 메뉴, 목차, 색인 등이 들어갑니다.</p>
+			<div class="ol_lst">
+				<ol>
+					<li>문서의 모든 링크가 nav 요소 안에 있을 필요는 없습니다.</li>
+					<li>nav 요소는 주요 블록의 탐색 링크를 위해 사용됨.</li>
+					<li>문서는 여러개의 nav 태그를 소유할수 있습니다. 예를 들면, 하나는 사이트 탐색에, 다른 하나는 내부 페이지 탐색을 위해 사용할 수 있습니다.</li>
+					<li>장애를 가진 사용자가 이용하는 스크린 리더와 같은 사용자 에이전트는 처음 콘텐츠가 랜더링될 때 이 요소를 제거할 것인지를 결정할 수 있습니다.</li>
+				</ol>
+			</div>
+
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.4.nav_element.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="class">
+				<li class="ie">9+</li>
+				<li class="edge">지원</li>
+				<li class="chrome">5.0</li>
+				<li class="firefox">4.0</li>
+				<li class="opera">11.1</li>
+				<li class="safari">4.1</li>
+			</ul>
+		</div>
 	</article>
 	<!-- nav element -->
 
 
-	<article id="article_element" class="uk_course">
+	<article id="article_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>article element</h2>
+
+		<div class="indent mt_l">
+			<p>&lt;article&gt; HTML &lt;article&gt; 요소는 문서, 페이지, 애플리케이션, 또는 사이트 안에 독립적으로 구분되거나 재사용 가능한 영역(예: 신디케이션)을 구성할 수 있습니다. 포럼의 글, 매거진/신문의 기사, 블로그 글 등이 여기에 포함됩니다.</p>
+
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.5.article_element1.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.5.article_element2.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="article">
+				<li class="ie">9+</li>
+				<li class="edge">지원</li>
+				<li class="chrome">5.0</li>
+				<li class="firefox">4.0</li>
+				<li class="opera">11.1</li>
+				<li class="safari">4.1</li>
+			</ul>
+		</div>
 	</article>
 	<!-- article element -->
 
 
-	<article id="footer_element" class="uk_course">
+	<article id="footer_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>footer element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;footer&gt; 는 가장 가까운 구조화 콘텐츠나 구조화 루트의 푸터를 나타냅니다.<br>
+				푸터는 일반적으로 작성자, 저작권 데이터, 관련된 문서의 링크에 대한 정보를 포함합니다.<br>
+				&lt;address&gt; 요소에 들어 있는 작성자에 대한 정보도 &lt;footer&gt; 요소에 포함될수 있습니다.
+			</p>
+
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.6.footer_element.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="class">
+				<li class="ie">9+</li>
+				<li class="edge">지원</li>
+				<li class="chrome">5.0</li>
+				<li class="firefox">4.0</li>
+				<li class="opera">11.1</li>
+				<li class="safari">4.1</li>
+			</ul>
+		</div>
 	</article>
 	<!-- footer element -->
 
 
-	<article id="aside_element" class="uk_course">
+	<article id="aside_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>aside element</h2>
+
+		<div class="indent mt_l">
+			<p>&lt;aside&gt; 요소는 문서의 주요 콘텐츠에 별도로 이어진 콘텐츠가 있는 문서의 한 구조를 말합니다. 주로 사이드바로 나타냅니다.</p>
+
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.7.aside_element1.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+			<div class="view_editor edit_code mt_m" data-target="html/03-sections/3.7.aside_element2.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="aside">
+				<li class="ie">9+</li>
+				<li class="edge">지원</li>
+				<li class="chrome">5.0</li>
+				<li class="firefox">4.0</li>
+				<li class="opera">11.1</li>
+				<li class="safari">4.1</li>
+			</ul>
+		</div>
 	</article>
 	<!-- aside element -->
 
 
-	<article id="hgroup_element" class="uk_course">
+	<article id="hgroup_element" class="uk_course" data-last-update="2019-11-11">
 		<h2>hgroup element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;hgroup&gt; 요소 (HTML 제목 그룹 요소) 는 제목의 구조를 나타냅니다.<br>
+				자신이 속한 암시적이거나 명백한 구조의 주제로서 문서의 개요 안에 있는 하나의 제목을 말합니다.<br>
+				&lt;hgroup&gt; 요소가 완성되기 전에 HTML로 HTML W3C 스펙으로부터 제거되었지만 아직 WHATWG 명세서의 일부와 적어도 부분적으로 대부분의 브라우저에서 지원.
+			</p>
+
+			<div class="view_editor ex_code mt_m" data-target="html/03-sections/3.8.hgroup_element.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="hgroup">
+				<li class="ie">9+</li>
+				<li class="edge">지원</li>
+				<li class="chrome">5.0</li>
+				<li class="firefox">4.0</li>
+				<li class="opera">11.1</li>
+				<li class="safari">4.1</li>
+			</ul>
+		</div>
 	</article>
 	<!-- hgroup element -->
+
+
+	<article class="reference_box">
+		<h2 class="tit">참조</h2>
+		<ul class="link_lst">
+			<li class="reference"><a href="https://www.w3.org/TR/html52/sections.html#sections" target="_blank" class="fas">W3C 문서</a></li>
+			<li class="reference"><a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element" target="_blank" class="fas">MDN 문서</a></li>
+		</ul>
+	</article>
+	<!-- 참조 -->
 
