- css 서브페이지 기본 틀 작업

--- a/assets/02-css/01-cssStart/cssStart.html
+++ b/assets/02-css/01-cssStart/cssStart.html
@@ -1,39 +1,41 @@
-<h1>cssStart</h1>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
-<p>cssStart</p>
+
+	<article id="css_intro" class="uk_course" data-last-update="00000">
+		<h2>CSS란?</h2>
+	</article>
+	<!-- CSS란? -->
+
+
+	<article id="css_reason" class="uk_course" data-last-update="00000">
+		<h2>CSS를 사용하는 이유?</h2>
+	</article>
+	<!-- CSS를 사용하는 이유? -->
+
+
+	<article id="css_history" class="uk_course" data-last-update="00000">
+		<h2>CSS의 발전</h2>
+	</article>
+	<!-- CSS의 발전 -->
+
+
+	<article id="css_modules" class="uk_course" data-last-update="00000">
+		<h2>CSS 모듈과 표준화 과정</h2>
+	</article>
+	<!-- CSS 모듈과 표준화 과정 -->
+
+
+	<article id="css_syntax" class="uk_course" data-last-update="00000">
+		<h2>CSS의 문법</h2>
+	</article>
+	<!-- CSS의 문법 -->
+
+
+	<article id="css_apply" class="uk_course" data-last-update="00000">
+		<h2>CSS 선언방식</h2>
+	</article>
+	<!-- CSS 선언방식 -->
+
+
+	<article id="css_cascading" class="uk_course" data-last-update="00000">
+		<h2>CSS 상속과 캐스케이딩</h2>
+	</article>
+	<!-- CSS 상속과 캐스케이딩 -->
