--- a/assets/02-css/02-cssBeginner/cssBeginner.html
+++ b/assets/02-css/02-cssBeginner/cssBeginner.html
@@ -1,1 +1,71 @@
-cssBeginner
+
+	<article id="css_units" class="uk_course" data-last-update="00000">
+		<h2>CSS 단위</h2>
+	</article>
+	<!-- CSS 단위 -->
+
+
+	<article id="css_selectors_level1" class="uk_course" data-last-update="00000">
+		<h2>CSS 선택자 level 1,2</h2>
+	</article>
+	<!-- CSS 선택자 level 1,2 -->
+
+
+	<article id="css_color" class="uk_course" data-last-update="00000">
+		<h2>Color 속성</h2>
+	</article>
+	<!-- Color 속성 -->
+
+
+	<article id="css_font" class="uk_course" data-last-update="00000">
+		<h2>Font 속성</h2>
+	</article>
+	<!-- Font 속성 -->
+
+
+	<article id="css_text" class="uk_course" data-last-update="00000">
+		<h2>Text 속성</h2>
+	</article>
+	<!-- Text 속성 -->
+
+
+	<article id="css_background" class="uk_course" data-last-update="00000">
+		<h2>Background 속성</h2>
+	</article>
+	<!-- Background 속성 -->
+
+
+	<article id="css_list" class="uk_course" data-last-update="00000">
+		<h2>List 속성</h2>
+	</article>
+	<!-- List 속성 -->
+
+
+	<article id="css_table" class="uk_course" data-last-update="00000">
+		<h2>Table 속성</h2>
+	</article>
+	<!-- Table 속성 -->
+
+
+	<article id="css_boxmodel" class="uk_course" data-last-update="00000">
+		<h2>박스 모델 속성</h2>
+	</article>
+	<!-- 박스 모델 속성 -->
+
+
+	<article id="css_effects" class="uk_course" data-last-update="00000">
+		<h2>시각적인 속성</h2>
+	</article>
+	<!-- 시각적인 속성 -->
+
+
+	<article id="css_formatting" class="uk_course" data-last-update="00000">
+		<h2>위치 속성</h2>
+	</article>
+	<!-- 위치 속성 -->
+
+
+	<article id="css_interface" class="uk_course" data-last-update="00000">
+		<h2>사용자 인터페이스 속성</h2>
+	</article>
+	<!-- 사용자 인터페이스 속성 -->
