--- a/assets/01-html/04-grouping/grouping.html
+++ b/assets/01-html/04-grouping/grouping.html
@@ -1,6 +1,62 @@
 
+	<div class="uk_note mt_l">
+		<h3 class="sound_only">콘텐츠 그룹화 요약 설명</h3>
+		<p>시작 &lt;body&gt; 태그와 종료 &lt;/body&gt; 태그 사이에 있는 콘텐츠의 블록이나 구획을 HTML 텍스트 콘텐츠를 사용해서 구성하세요.</p>
+		<p>accessibility와 SEO는 중요하며, 이 요소들은 콘텐츠의 구조나 목적을 식별화합니다.</p>
+	</div>
+
+
 	<article id="main_element" class="uk_course">
 		<h2>main element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;main&gt; 요소는 문서나 앱 &lt;body&gt;의 주요 콘텐츠를 나타냅니다. 주요 콘텐츠 영역은 문서의 핵심 주제나 애플리케이션의 핵심 기능성에 대해 부연, 또는 직접적으로 연관된 콘텐츠들로 이루어집니다.<br>
+				&lt;main&gt; 요소는 대부분의 인터넷 익스플로러 11 이하를 제외한 브라우저에서 지원합니다.<br>
+				따라서 &quot;main&quot; ARIA role 속성을 &lt;main&gt; 요소에 추가해 인터넷 익스플로러에서도 접근성을 확보하는 편이 좋습니다.
+			</p>
+
+			<div class="ol_lst indent">
+				<ol>
+					<li>&lt;main&gt; 요소의 콘텐츠는 사이드바나, 내비게이션 링크, 저작권 정보, 사이트 로고, (문서의 주요 기능이 검색 폼이 아닐 경우)검색 폼과 같은 모든 문서에 반복적으로 있는 어떠한 콘텐츠라도 제외되어야 하며 문서 안에 가장 유일한 요소여야 합니다.</li>
+					<li>한 문서에 반복적으로 사용하는 경우 hidden 속성으로 표시하여 사용해야 함.</li>
+					<li>hidden 속성 없이는 문서에 하나보다 많은 &lt;main&gt; 요소가 존재해선 안됩니다.</li>
+				</ol>
+			</div>
+
+			<div class="view_editor ex_code mt_l" data-target="html/04-grouping/4.1.main_element1.html">
+				<h3 class="ve_tit">main 요소를 하나 이상 사용할때 올바른 예</h3>
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+			<div class="view_editor ex_code mt_s" data-target="html/04-grouping/4.1.main_element2.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+			<div class="view_editor ex_code mt_s" data-target="html/04-grouping/4.1.main_element3.html">
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<div class="view_editor ex_code ex_wrong mt_l" data-target="html/04-grouping/4.1.main_element4.html">
+				<h3 class="ve_tit">main 요소를 하나 이상 사용할때 잘못된 예</h3>
+				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="class">
+				<li class="ie false">지원안함</li>
+				<li class="edge">12.0</li>
+				<li class="chrome">26.0</li>
+				<li class="firefox">21.0</li>
+				<li class="opera">16.0</li>
+				<li class="safari">7.0</li>
+			</ul>
+		</div>
 	</article>
 	<!-- main element -->
 
