--- a/assets/01-html/04-grouping/grouping.html
+++ b/assets/01-html/04-grouping/grouping.html
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 
-			<ul class="browser_support mt_l" data-tit="class">
+			<ul class="browser_support mt_l" data-tit="main">
 				<li class="ie false">지원안함</li>
 				<li class="edge">12.0</li>
 				<li class="chrome">26.0</li>
