--- a/main.html
+++ b/main.html
@@ -67,7 +67,7 @@
 			<p class="dp_mb">아래 에디터기에서 <i>코드를 테스트 할 수 있습니다</i>.</p>
 		</div>
 
-		<div class="editor_wrap">
+		<div class="editor_wrap" data-target="none">
 			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap">
 					<textarea>
