- 컨텐츠 그룹화 코딩 완료, 문자 컨텐츠 작업 중

--- a/assets/01-html/03-sections/sections.html
+++ b/assets/01-html/03-sections/sections.html
@@ -7,7 +7,7 @@
 
 
 	<article id="header_element" class="uk_course" data-last-update="2019-11-11">
-		<h2>header element</h2>
+		<h2 class="html5">header element 대대</h2><!-- <i class="fab fa-html5"></i> -->
 
 		<div class="indent mt_l">
 			<p>
@@ -86,7 +86,7 @@
 
 
 	<article id="section_element" class="uk_course" data-last-update="2019-11-11">
-		<h2>section element</h2>
+		<h2 class="html5">section element</h2>
 
 		<div class="indent mt_l">
 			<p>
@@ -126,7 +126,7 @@
 
 
 	<article id="nav_element" class="uk_course" data-last-update="2019-11-11">
-		<h2>nav element</h2>
+		<h2 class="html5">nav element</h2>
 
 		<div class="indent mt_l">
 			<p>&lt;nav&gt; 요소는 현재 페이지 안 또는 다른 페이지로 가는 링크를 보여주는 페이지의 한 구조를 말합니다. 주로 태그 안에 메뉴, 목차, 색인 등이 들어갑니다.</p>
@@ -159,7 +159,7 @@
 
 
 	<article id="article_element" class="uk_course" data-last-update="2019-11-11">
-		<h2>article element</h2>
+		<h2 class="html5">article element</h2>
 
 		<div class="indent mt_l">
 			<p>&lt;article&gt; HTML &lt;article&gt; 요소는 문서, 페이지, 애플리케이션, 또는 사이트 안에 독립적으로 구분되거나 재사용 가능한 영역(예: 신디케이션)을 구성할 수 있습니다. 포럼의 글, 매거진/신문의 기사, 블로그 글 등이 여기에 포함됩니다.</p>
@@ -189,7 +189,7 @@
 
 
 	<article id="footer_element" class="uk_course" data-last-update="2019-11-11">
-		<h2>footer element</h2>
+		<h2 class="html5">footer element</h2>
 
 		<div class="indent mt_l">
 			<p>
@@ -218,7 +218,7 @@
 
 
 	<article id="aside_element" class="uk_course" data-last-update="2019-11-11">
-		<h2>aside element</h2>
+		<h2 class="html5">aside element</h2>
 
 		<div class="indent mt_l">
 			<p>&lt;aside&gt; 요소는 문서의 주요 콘텐츠에 별도로 이어진 콘텐츠가 있는 문서의 한 구조를 말합니다. 주로 사이드바로 나타냅니다.</p>
@@ -248,7 +248,7 @@
 
 
 	<article id="hgroup_element" class="uk_course" data-last-update="2019-11-11">
-		<h2>hgroup element</h2>
+		<h2 class="html5">hgroup element</h2>
 
 		<div class="indent mt_l">
 			<p>
