--- a/assets/guide.html
+++ b/assets/guide.html
@@ -107,10 +107,10 @@
 		</div>
 		<!-- ol_lst -->
 
-		<dl class="txt_ex mt_l">
+		<div class="txt_ex mt_l">
 			<h3>1. HTML5 doctype</h3>
 			<p>현재 문서가 HTML5 문서임을 명시합니다. doctype은 문서의 최상위에 위치해야 하며, doctype의 선언방식은 다음과 같습니다.</p>
-		</dl>
+		</div>
 		<!-- txt_ex -->
 
 		<dl class="line_code mt_l">
