- 컨텐츠 그룹화 코딩 완료, 문자 컨텐츠 작업 중

--- a/assets/01-html/03-sections/sections.html
+++ b/assets/01-html/03-sections/sections.html
@@ -7,7 +7,7 @@
 
 
 	<article id="header_element" class="uk_course" data-last-update="2019-11-11">
-		<h2 class="html5">header element 대대</h2><!-- <i class="fab fa-html5"></i> -->
+		<h2 class="html5">header element</h2><!-- <i class="fab fa-html5"></i> -->
 
 		<div class="indent mt_l">
 			<p>
